chore(version): bump to v0.7.7 (patch)
- Admin eye modal: clan logo fallback when portrait missing (DB-backed)
- Add clans table + seed/reseed + viewer with absolute URLs and contrast bg
- Canonical host rule (.cursor/rules/hosting.mdc)
- Remove inline portrait borders in admin modal
- Update CHAT_REPORT.mdc (report.mdc style)

--- a/images/Clan Logos/index..html
+++ b/images/Clan Logos/index..html
@@ -457,6 +457,6 @@ q-17 0 -33 -27q6 -3 16.5 -13t16.5 -13q22 11 33 33zM685 663q0 30 -23 30q-21 0 -30
  />
   </font>
 </defs></svg>
-
+<p>what is this?</p>
 </body>
 </html>
